--- a/index.html
+++ b/index.html
@@ -31,27 +31,19 @@
   <header class="header">
     <!-- navbar start-->
     <nav class="navbar navbar-expand-lg navbar-light  navbarheight">
-      <div class="d-flex ms-5">
-        <a class="navbar-brand" href="index.html"><img class="img-fluid " src="logo.png" alt="Penguin Fashion Logo"></a>
+      <div class="container">
+        <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="Penguin Fashion Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse ps-5 navbar-link" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="me-5">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="me-5">
-              <a class="nav-link" href="#">Product</a>
-            </li>
-            <li class="me-5">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="me-5">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse navbar-link " id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link me-3" href="#">Home</a>
+            <a class="nav-link me-3" href="#">Product</a>
+            <a class="nav-link me-3" href="#">About Us</a>
+            <a class="nav-link me-3" href="#">Contact Us</a>
+          </div>
         </div>
       </div>
     </nav>
@@ -174,16 +166,16 @@
       <div class="row">
           <div class="col-md-6 order-1 order-md-0">
               <div class="row shadow mb-3 rounded mt-5">
-                  <div class="col-md-4 ">
+                  <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 12.png" alt="">
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-8 ">
                       <h4 class="third-section ">Find the Perfect Fit</h4>
                       <p >Everybody is different, which is why we<br> offer styles for every body.</p>
                   </div>
               </div>
               <div class="row shadow mb-3 rounded mt-5">
-                  <div class="col-md-4">
+                  <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 13.png" alt="">
                   </div>
                   <div class="col-md-8">
@@ -192,7 +184,7 @@
                   </div>
               </div>
               <div class="row shadow mb-3 rounded mt-5">
-                  <div class="col-md-4">
+                  <div class="col-md-4 text-center">
                       <img style="width: 100px;" class="img-fluid" src="images/image 14.png" alt="">
                   </div>
                   <div class="col-md-8">
@@ -224,29 +216,19 @@
   </section>
   <!-- news letter end -->
   <!-- footer start -->
- <footer class="bg-light mt-5 footer-height ">
+ <footer class="bg-light mt-5 footer-height container ">
     <div class="row">
-      <div class="col-md-4 order-3 order-md-1">
+      <div class="col-md-6 order-3 order-md-1">
          <img class="img-fluid " src="logo.png" alt="">
       </div>
-      <div class="col-md-4 order-1 order-md-2">
-          <div class="row text-center">
-              <div class="col-md-12 mt-4">
-                <a href="#">Return-policy</a>
-                <a href="#">Refund-policy</a>
-                <a href="#">Support</a>
-              </div>
-            </div>
-      </div>
-      <div class="col-md-4 text-center order-2 order-md-3">
-         <h5>Stay Connected With Facebook</h5>
+     
+      <div class="col-md-6 text-center order-2 order-md-3">
+         <h5>Stay Connected Through Facebook</h5>
          <h5><a href="#">www.facebook.com/Penguin Fashion</a></h5>
       </div>
   </div>
 </footer> 
   <!--footer end  -->
   <!-- extra work end -->
-
 </body>
-
 </html>
